@@ -1,22 +1,0 @@
-LATEXFILES = *.aux\
-        *.bbl\
-        *.blg\
-        *.ilg\
-        *.log\
-        *.nlo\
-        *.nls\
-        *.toc\
-        *.aux\
-	yaqcaffy-*\
-        yaqcaffy.tex\
-        Rplots.pdf\
-        *.dvi\
-        *.map\
-        *.out\
-
-vignette:
-	pdflatex yaqcaffy.tex
-
-clean:	
-	rm -f $(LATEXFILES)
-	rm -f *~
